--- a/css/index.css
+++ b/css/index.css
@@ -123,13 +123,13 @@
 
 .about .summary h1 {
     font-family: 'grand-hotel-regular';
-    font-size: 100px;
+    font-size: 5em;
     margin-bottom: 3%;
 }
 
 .about .summary h2 {
     font-family: 'proxima-nova-light';
-    font-size: 40px;
+    font-size: 2.5em;
     margin-bottom: 20%;
 }
 
