--- a/css/index.css
+++ b/css/index.css
@@ -9,13 +9,56 @@
         flex-wrap: wrap;
     }
 
+    .about nav {
+        margin: 7% 50% 12% 12%;
+        font-family: 'proxima-nova-regular';
+        font-size: 24px;
+    }
+
+    .about .summary {
+        margin: 0% 27% 15% 12%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about .summary h1 {
+        font-family: 'grand-hotel-regular';
+        font-size: 100px;
+        margin-bottom: 3%;
+    }
+
+    .about .summary h2 {
+        font-family: 'proxima-nova-light';
+        font-size: 40px;
+        margin-bottom: 20%;
+    }
+
+    .about .summary p {
+        font-size: 24px;
+        line-height: 1.9;
+    }
+
     .profile-picture {
         margin: 0% 0% 3% -30%;
         width: 60%;
+        border-radius: 50%;
+        box-shadow: 0px 0px 4px;
     }
 
     .contact .personal-contact {
         margin: 0% 15% 5% 15%;
+    }
+
+    .contact .personal-contact h1 {
+        font-family: 'proxima-nova-bold';
+        font-size: 35px;
+        margin-bottom: 5%;
+    }
+    
+    .contact .personal-contact p {
+        font-family: 'proxima-nova-regular';
+        font-size: 24px;
+        line-height: 2.1;
     }
 }
 
@@ -26,17 +69,61 @@
         flex-direction: column;
     }
 
+    .about nav {
+        margin: 7% 12% 12% 12%;
+        font-family: 'proxima-nova-regular';
+        font-size: 24px;
+    }
+
+    .about .summary {
+        margin: 0% 12% 15% 12%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about .summary h1 {
+        font-size: 60px;
+        margin-bottom: 3%;
+        text-align: center;
+    }
+
+    .about .summary h2 {
+        font-size: 20px;
+        margin-bottom: 15%;
+        text-align: center;
+    }
+
+    .about .summary p {
+        font-size: 16px;
+        line-height: 1.3;
+        text-align: justify;
+        margin-bottom: 15%;
+    }
+
     .profile-picture {
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        width: 20%;
+        top: 35%;
+        margin: auto;
+        width: 30%;
+        border-radius: 10%;
+        box-shadow: 0px 0px 4px;
+        margin-top: -20%;
     }
 
     .contact .personal-contact {
-        margin: 3% 15% 5% 15%;
+        margin: 7% 15% 5% 15%;
     }
-    .
+
+    .contact .personal-contact h1 {
+        font-family: 'proxima-nova-bold';
+        font-size: 25px;
+        margin-bottom: 5%;
+    }
+    
+    .contact .personal-contact p {
+        font-family: 'proxima-nova-regular';
+        font-size: 16px;
+        line-height: 2.1;
+    }
 }
 
 
@@ -95,7 +182,6 @@
 }
 
 .about nav {
-    margin: 7% 50% 12% 12%;
     font-family: 'proxima-nova-regular';
     font-size: 24px;
 }
@@ -116,27 +202,21 @@
 }
 
 .about .summary {
-    margin: 0% 27% 15% 12%;
     display: flex;
     flex-direction: column;
 }
 
 .about .summary h1 {
     font-family: 'grand-hotel-regular';
-    font-size: 5em;
     margin-bottom: 3%;
 }
 
 .about .summary h2 {
     font-family: 'proxima-nova-light';
-    font-size: 2.5em;
-    margin-bottom: 20%;
 }
 
 .about .summary p {
     font-family: 'proxima-nova-light';
-    font-size: 24px;
-    line-height: 1.9;
 }
 
 
@@ -152,18 +232,6 @@
     background: #F2E9E4;
 }
 
-.contact .personal-contact h1 {
-    font-family: 'proxima-nova-bold';
-    font-size: 35px;
-    margin-bottom: 5%;
-}
-
-.contact .personal-contact p {
-    font-family: 'proxima-nova-regular';
-    font-size: 24px;
-    line-height: 2.1;
-}
-
 .contact .social-media {
     text-align: center;
     display: flex;
@@ -173,11 +241,6 @@
 
 .contact .social-media img {
     width: 60%;
-}
-
-.profile-picture {
-    border-radius: 50%;
-    box-shadow: 0px 0px 4px;
 }
 
 footer {
