--- a/css/index.css
+++ b/css/index.css
@@ -73,6 +73,7 @@
         margin: 7% 12% 12% 12%;
         font-family: 'proxima-nova-regular';
         font-size: 24px;
+        text-align: center;
     }
 
     .about .summary {
