--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@
     .about .summary p {
         font-size: 16px;
         line-height: 1.3;
-        text-align: justify;
+        text-align: center;
         margin-bottom: 15%;
     }
 
